<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BlancCasse"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:contentDescription="@string/todo"
            android:src="@mipmap/emplacement"
            tools:ignore="ImageContrastCheck" />
    </FrameLayout>


    <ImageButton
        android:id="@+id/imageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:backgroundTint="#FFFFFF"
        android:src="@drawable/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="7dp" />

    <ImageButton
        android:id="@+id/imageView3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/panier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="7dp"
        android:backgroundTint="#FFFFFF"/>

    <ImageButton
        android:id="@+id/imageView2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/profil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="7dp"
        android:backgroundTint="#FFFFFF"
        >

    </ImageButton>


    <TextView
        android:id="@+id/textView"
        tools:ignore="TextContrastCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/Nom_Restaurant"
        android:textColor="@color/VertAvocado"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />


    <Button
        android:id="@+id/button"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/RedOrange"
        android:drawableBottom="@drawable/custom_button"
        android:text="@string/button_Installer"

        android:textColor="@color/BlancCasse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck" />


    <Button
        android:id="@+id/buttonPrecedent"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/RedOrange"
        android:text="@string/button_Precedent"

        android:textColor="#212121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989"
        tools:ignore="MissingConstraints,TextContrastCheck,TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>