<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccueilPage"
    android:id="@+id/fragment_container">

    <!--Bonjour Nom d'utilisateur-->
    <!--photoDeProfil-->
    <!--barrederecherche-->


    <!--Bonjour Catégories-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F9E8"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-111dp">

        <!--Catégories-->

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="85dp"
            android:layout_height="91dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/profildelutilisateur" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/bonjour_jean"
            android:textColor="@color/RedOrange"
            android:textSize="32sp"
            android:textStyle="bold" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/searchview_background"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="Chercher ton plat favori" />

        <TextView
            android:id="@+id/textViewCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-45dp"
            android:fontFamily="serif"
            android:text="Catégories"
            android:textColor="@color/VertAvocado"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.037"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:contextClickable="true"
                app:srcCompat="@drawable/salad"
                android:scaleType="fitCenter"
                android:background="@color/BlancCasse"/>

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:contextClickable="true"
                app:srcCompat="@drawable/pizzapiece"
                android:scaleType="fitCenter"
                android:background="@color/BlancCasse"/>

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/boissons"
                android:scaleType="fitCenter"
                android:background="@color/BlancCasse"/>



            <ImageButton
                android:id="@+id/imageButtonMBurg"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/burger"
               android:scaleType="fitCenter"
                android:background="@color/BlancCasse"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/salade"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:text="Pizza"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:text="Boisson"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:contextClickable="true"
                android:linksClickable="true"
                android:longClickable="true"
                android:text="Burger"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewCategories2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="Les plats mieux notés"
            android:textColor="@color/VertAvocado"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.037"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton17"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:clickable="true"
                app:srcCompat="@drawable/img"
                android:scaleType="fitCenter"
                android:background="@color/BlancCasse"
                />

            <ImageButton
                android:id="@+id/imageButton12"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:clickable="true"
                app:srcCompat="@drawable/pizzamarguerita"
                android:scaleType="fitCenter"
                android:background="@color/BlancCasse"
                android:contentDescription="@string/todo2" />

            <ImageButton
                android:id="@+id/imageButton11"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/BlancCasse"
                android:clickable="true"
                android:contentDescription="@string/todo1"
                android:contextClickable="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/burgerimage"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSalade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/salade_la_mexicaine"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewMarg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:text="@string/marguerita"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewburger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"

                android:text="@string/cheese_burger"
                android:textAlignment="center"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>